2009-03-16  Steffen Kamper  <info@sk-typo3.de>

	* Reconstruction of page module #10697 - Step4: render "unused elements" like normal elements, drag&drop between unused elements and content area
	* Reconstruction of page module #10697 - Step3: changes to link functions, usage of link function, blind option for icons, hook for additional icons, new "unlink"-icon, added stylesheet
	* Reconstruction of page module #10697 - Step2: complete the link helper functions

2009-03-15  Steffen Kamper  <info@sk-typo3.de>

	* Reconstruction of page module #10697 - Step1: use debug flag for not loading minified script

2009-03-13  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10615: Show sys_notes in Page Module 
	* Fixed bug #10643: Page and TO icons aren't shown anymore 
	* Fixed bug #10662: CREATE/UPDATE of DS/TO in TV wizard doesn't work (SVN rev. 17700) 
	* Fixed bug #10685: incorrect next_ds and next_to: workspace overlay missing in page module 
	* Fixed bug #10661: "Show XML" button doesn't work (SVN rev. 17700)

2009-03-09  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10644: Links to "create" in Template Files (mod2) are broken

2009-03-08  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10636: Show mapping-links and -commands while editing a field

2009-03-07  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10633: cm1 need to be localized

2009-03-06  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10618: Wrong returnUrl in record list

2009-03-04  Dmitry Dulepov  <dmitry@typo3.org>

	* Moved code for getDynTabMenu in the new "New CE wizard" to be compatible with TYPO3 RFC #10601

2009-03-03  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #10593: External URLs of type https:// are not displayed correctly under the TV Page-Mod (thanks to Dirk Diebel)

2009-02-28  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #9931: Drag'n Drop patch carries destructive Sorting-Bug
	* Fixed bug #7767: CSH help texts are missing (thanks to Benjamin Mack)
