@@ -4,8 +4,12 @@ return jumpToUrl(command);while(it.className!='sortableItem')
 it=it.parentNode;new Ajax.Request(command);new Effect.Fade(it,{duration:0.5,afterFinish:sortable_hideRecordCallBack});}
 function sortable_hideRecordCallBack(obj){var el=obj.element;while(el.lastChild)
 el.removeChild(el.lastChild);}
-function sortable_unlinkRecordCallBack(obj){var el=obj.element;var pn=el.parentNode;pn.removeChild(el);sortable_update(pn);}
+function sortable_unlinkRecordCallBack(obj){var el=obj.element;var pn=el.parentNode;pn.removeChild(el);sortable_update(pn);if(el.innerHTML.match(/makeLocalRecord/))
+return;if(!(pn=document.getElementById('tt_content:')))
+return;pn.appendChild(el);sortable_update(pn);new Effect.Appear(el,{duration:0.5});}
 function sortable_unlinkRecord(id){new Ajax.Request("index.php?"+sortable_linkParameters+"&ajaxUnlinkRecord="+escape(id));new Effect.Fade(id,{duration:0.5,afterFinish:sortable_unlinkRecordCallBack});}
+function sortable_deleteRecordCallBack(obj){var el=obj.element;var pn=el.parentNode;pn.removeChild(el);sortable_update(pn);}
+function sortable_deleteRecord(id){new Ajax.Request(sortable_baseLink+"&ajaxDeleteRecord="+escape(id));new Effect.Fade(id,{duration:0.5,afterFinish:sortable_deleteRecordCallBack});}
 function sortable_updateItemButtons(el,position,pID){var p=new Array();var p1=new Array();var href="";var i=0;var newPos=escape(pID+position);var childs=el.childElements()
 var buttons=childs[0].childElements()[0].childElements()[0].childElements()[1].childNodes;for(i=0;i<buttons.length;i++){if(buttons[i].nodeType!=1)continue;href=buttons[i].href;if(href.charAt(href.length-1)=="#")continue;if((p=href.split("unlinkRecord")).length==2){buttons[i].href=p[0]+"unlinkRecord(\'"+newPos+"\');";}else if((p=href.split("CB[el][tt_content")).length==2){p1=p[1].split("=");buttons[i].href=p[0]+"CB[el][tt_content"+p1[0]+"="+newPos;}else if((p=href.split("&parentRecord=")).length==2){buttons[i].href=p[0]+"&parentRecord="+newPos;}else if((p=href.split("&destination=")).length==2){buttons[i].href=p[0]+"&destination="+newPos;}}
 if((p=childs[1].href.split("&parentRecord=")).length==2)
